--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,7 @@ body {
 
 @layer components {
   .container {
-    @apply mx-auto max-w-[1440px] px-[120px];
+    @apply mx-auto max-w-[90%] px-[5%];
   }
   
   .nav-link {
