changed bg of the project globally to white

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: rgb(var(--background-rgb));
+  background: white;
 }
 
 @layer components {
